===========================
Isotope eCommerce Changelog
===========================

Version 0.2.6 (2011-02-??)
------------------------------
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Fixed ##newsletter.css## in HTML email
- Fixed: Address was not added to address book correctly

Version 0.2.5 (2011-02-01)
------------------------------
- Added Isotope version constant to config file
- Improved: Use trigger_error() not "throw Exception" if no store configuration is available (Ticket #372)
- Fixed discount applied to subtotal on cart overrides other restrictions (Ticket #352)
- Fixed sql in edit-all mode on attributes
- Fixed ajax load spinning icon
- Fixed loading message font color
- Fixed text area floating in backend product edit mode
- Dropped unnessesary database fields
- Dropped unnecessary template ce_link_repeater.tpl
- Removed deprecated ups_developersKey

Version 0.2.4 (2011-01-17)
------------------------------
- Added: Use product ID in URL if alias is missing
- Updated ContentIsotope methods to match ModuleIsotope methods (Ticket #290)
- Fixed weight total shipping included rates from all shipping modules
- Fixed mandatory asterisks not appearing in checkout address fields
- Fixed email issues with mail clients not supporting <tfood>
- Fixed missing comma in mail text (Ticket #217)
- Fixed HTML issue in iso_reader_default.tpl (Ticket #203)
- Fixed: Custom templates were not always shown in "override all" mode (see Contao Core Ticket #2725)
- Fixed shipping and payment method always displaying error message (Ticket #175)
- Fixed toggle button not appearing for non-admins (Ticket #253)
- Fixed global operation labels in IE7 (Ticket #253)
- Fixed order delete button appearing for non-admins (Ticket #192)
- Fixed issues with runonce.php database file update on certain systems
- Fixed download listing out of view (Ticket #280)
- Fixed small error in the mod_iso_addressbook.tpl (Ticket #324)